packages/svelte/tests/validator/samples/state-referenced-locally-types/input.svelte
<script lang="ts">
	let { a }: { a: string } = $state({});
	let { b }: { b: string } = $derived(a);
</script>

<button onclick={()=>a++}></button>