packages/svelte/tests/compiler-errors/samples/runes-no-derived-update/main.svelte
<script>
	const a = $state(0);
	let b = $derived(a);
	b++;
</script>
